--- a/sightings/templates/sightings/all.html
+++ b/sightings/templates/sightings/all.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>all squirrel</title>
+   <body>
+    <ul>
+    {% for squirrel in squirrels %}
+    <li><a href="{% url 'update' squirrel.unique_squirrel_id %}">{{ squirrel.unique_squirrel_id }}</a></li>
+    {% endfor %}
+    </ul>
+   </body>
 </html>
