changed stats to html

--- a/sightings/templates/sightings/stats.html
+++ b/sightings/templates/sightings/stats.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>stats of sightings</title></head>
+    
+    <title>Statistics of Sightings</title></head>
 
 </html>
+
+
