show squirred details/forms show squirred details/forms show squirred details/forms

--- a/sightings/templates/sightings/update.html
+++ b/sightings/templates/sightings/update.html
@@ -3,4 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Update a new sighting of squirrel</title></head>
+
+<form method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Save">
+</form>
 </html>
