Add and update now works perfectly

--- a/sightings/templates/sightings/stats.html
+++ b/sightings/templates/sightings/stats.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Statistics of Sightings</title></head>
-#    <a href = '/all'>Back</a>
+#    <a href = '/sightings'>Back</a>
   </head>
 
   <body>
