--- a/sightings/templates/sightings/add.html
+++ b/sightings/templates/sightings/add.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Add a new sighting of squirrel</title></head>
-    <form method="post">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+    <body>
+	    <form method="post">
+		    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Save">
+            </form>
+    </body>
 </html>
 
