--- a/map/templates/map/base.html
+++ b/map/templates/map/base.html
@@ -1,1 +1,69 @@
-#home html
+<!doctype html>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.82.0">
+    <title>Cover Template · Bootstrap v5.0</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+
+    
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    {% load static %}
+    <link rel='stylesheet' href="{% static 'map/templates/map/cover.css' %}">
+  </head>
+  <body class="d-flex h-100 text-center text-white bg-dark">
+    
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">Squirrel Tracker</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link active" aria-current="page" href="">Home</a>
+        <a class="nav-link" href="/sightings/add">Add</a>
+        <a class="nav-link" href="/map/">Map</a>
+        <a class="nav-link" href="/sightings/">Sightings</a>
+	<a class="nav-link" href="sightings/stats">Statistics</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="px-3">
+    <h3>About</h3>
+    <p class="lead">This website is funded by billionare MR. Joffrey Hosencratz to keep track of all known squirrels as possible. Users can add data if spotting new squirrels. Also, the website allows user to update existing data if found any change. </p>
+  </main>
+
+  <footer class="mt-auto text-white-50">
+    <p>Data Source: <a href = "https://data.cityofnewyork.us/Environment/2018-Central-Park-Squirrel-Census-Squirrel-Data/vfnx-vebw" class="text-white">2018 Central Park Squirrel Census</a></p>
+    <p>Developed by: Jackie Zhang, Guanchao Qi <a class="text-white"></a></p>
+  </footer>
+</div>
+
+
+    
+  </body>
+</html>
+
