--- a/map/templates/map/base.html
+++ b/map/templates/map/base.html
@@ -13,7 +13,7 @@
     
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -33,7 +33,7 @@
     
     <!-- Custom styles for this template -->
     {% load static %}
-    <link rel='stylesheet' href="{% static 'map/templates/map/cover.css' %}">
+    <link rel='stylesheet' href="{% static 'cover.css' %}">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
