--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -4,7 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <a class="nav-link" href="/..">Home</a>
+    <a class="nav-link" href="/sightings/add">Add</a>
+    <a class="nav-link" href="/map/">Map</a>
+    <a class="nav-link" href="/sightings/">Sightings</a>
+    <a class="nav-link" href="/sightings/stats">Statistics</a>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
