--- a/sightings/templates/sightings/add.html
+++ b/sightings/templates/sightings/add.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <a class="nav-link" href="/..">Home</a>
+        <a class="nav-link" href="/sightings/add">Add</a>
+        <a class="nav-link" href="/map/">Map</a>
+        <a class="nav-link" href="/sightings/">Sightings</a>
+        <a class="nav-link" href="/sightings/stats">Statistics</a>
     <title>Add a new sighting of squirrel</title></head>
     <body>
 	    <form method="post">
